configs/deployment.yaml
# Creating MLflow deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow-app
  template:
    metadata:
      labels:
        app: mlflow-app
    spec:
      containers:
      - name: mlflow-app
        image: bibekyess/mlops-practice-mlflow:v1 # FIXME: Change with your docker-hub-username/repo-name:tag
        imagePullPolicy: Always
        args:
        - --host=0.0.0.0
        - --port=5000
        - --backend-store-uri=/opt/mlflow/backend/
        - --default-artifact-root=/opt/mlflow/artifacts/
        - --workers=2
        # Can also do this: (`--` seperates the command line arguments and is a common convention in docker container)
          # args: ["--host=0.0.0.0", "--port=5000", "--backend-store-uri=/opt/mlflow/backend/", "--default-artifact-root=/opt/mlflow/artifacts/", "--workers=2"]

        ports:
        - name: http
          containerPort: 5000
          protocol: TCP
        volumeMounts:
        - name: mlflow-pvc
          mountPath: /opt/mlflow/
      volumes:
        - name: mlflow-pvc
          persistentVolumeClaim:
            claimName: mlflow-pvc
